assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display= swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Lato, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

/* heading and logo */


h2 {
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #252525;
    clear: both;
}

h1 {
    text-shadow: 4px 4px 4px #aaa;
    color: #FF0000;
    font-family: Oswald, sans-serif;
    letter-spacing: 4px;
    text-transform: uppercase;
}

#logo {
    float: left;
    font-size: 280%;
    margin-left: 30px;
}

/* navigation links*/

#menu {
    font-size: 110%;
    letter-spacing: 3px;
}

#menu,
#logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid black;
}

.active {
    border-bottom: 1px solid red;
}

/* hero image */

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;

}

#cover-text h2 {
    color: black;
}

#cover-text {
    font-family: Oswald, sans-serif;
    font-size: 150%;
    text-transform: uppercase;
    letter-spacing: 4px;
    float: right;
    line-height: 50px;
    color: #252525;
    
    width: 400px;
    height: 80px;

    padding-top: 40px;
    padding-right: 33px;

    bottom: 0 auto;
    right: 80px;

    position: absolute;
    
}


#hero-image {
    height: 600px;
    width: 100%;
    background: url('../images/hero-image.jpg') no-repeat left;
    opacity: 0.8;

    /* animates zoom effects on loading page */
    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

/* creates the level of zoom for hero image */

@keyframes hero-zoom {
    from {
        transform: scale(1);

    }
    to {
        transform: scale(1.1);
    }
}

/* Early Life */

#early-life {
    height: 600px;
}

#left-about {
    padding-top: 30px;
    width: 33%;
    float: left;
}

#right-about {
    padding-top: 30px;
    width: 33%;
    float: right;
    background-color: silver;
}

#center-about {
    padding-top: 20px;
        width: 33%;
        margin: 0 auto;
        background-color: green;
}

hr {
    border-top: 1px solid black;
    width: 100%;
    margin: 5px 0;
}

.left-about-heading {
    width: 90%;
    float: right;
    line-height: 30px;
    clear: both;
    margin-bottom: 20px;

}

.right-about-heading {
    width: 90%;
    float: left;
    line-height: 30px;
    clear: both;
    margin-bottom: 20px;

}

.right-about-heading h2 {
    text-align: right;
}

.right-about-heading p {
    text-align: right;
}

